# AgentOps

./: .env.example  .gitignore  AGENTS.md  DECISIONS.md  Makefile  PROGRESS.md  README.md  pyproject.toml
docs/: ARCHITECTURE.md  QUALITY.md  SPRINT_CONTRACT.md  features.json
harness/: validate.py
scripts/: check.ps1  dev.ps1  lint.ps1  retention.ps1  setup.ps1  smoke-mimo.ps1  test.ps1
src/agentops_api/: __init__.py  audit.py  main.py  privacy.py  rate_limit.py  retention.py  sdk.py  security.py  viewer.py
src/agentops_api/api/: __init__.py  routes.py
src/agentops_api/evaluation/: __init__.py  dataset_regression.py  dataset_runner.py  mimo.py  schemas.py
src/agentops_api/instrumentation/: __init__.py  langgraph.py
src/agentops_api/observability/: __init__.py  repository.py  schemas.py  storage.py
src/agentops_api/rag/: __init__.py  schemas.py
tests/: conftest.py  repository_contract.py  test_audit_log.py  test_bootstrap.py  test_evaluation_api.py  test_evaluation_schemas.py  test_golden_dataset_api.py  test_golden_dataset_regression.py  test_golden_dataset_regression_api.py  test_golden_dataset_runner.py  test_langgraph_instrumentation.py  test_mimo_provider.py  test_privacy.py  test_rag_api.py  test_rag_schemas.py  test_rate_limit.py  test_regression_api.py  test_regression_schemas.py  test_retention_cleanup.py  test_run_detail_api.py  test_runs_api.py  test_sdk.py  test_security_api.py  test_storage_boundary.py  test_trace_repository.py  test_trace_viewer_ui.py
